--- a/src/index.scss
+++ b/src/index.scss
@@ -44,21 +44,23 @@
   --violeta: rgb(135, 54, 189);
 }
 
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
 body,
 html {
   margin: 0;
+  overflow-x: hidden;
 }
 
 .house {
   
   & img {
-    max-width: 20px;
+    max-width: 25px;
   }
-
-  position: absolute;
-  left: 5vw;
-  margin-left: 10px;
-  top: 100px;
 
   &:hover {
     cursor: pointer;
@@ -148,7 +150,7 @@ html {
   flex-direction: column;
 
   & .house {
-    position: initial;
+    margin: 1rem 0 2rem 8rem;
   }
 
   & .contenedor {
@@ -208,7 +210,7 @@ html {
   background-repeat: no-repeat;
 
   & .house {
-    position: initial;
+    margin-bottom: 2rem;
   }
 
   & h2 {
@@ -302,13 +304,17 @@ html {
 }
 
 #tu {
-  position: relative;
   background-image: url(img/fondo_4.png);
   background-size: cover;
   background-repeat: no-repeat;
   margin-top: -3.7rem;
   padding-top: 6rem;
   padding-bottom: 5rem;
+
+  & .house {
+    margin: 1rem 0 1rem 2rem;
+  }
+
 
   & p {
     font-family: tercera;
@@ -324,9 +330,9 @@ html {
     & h2 {
       font-family: primera;
       font-size: 2rem;
-      margin-left: 2rem;
-      color: var(--amarillo-opaco);
-      text-shadow: -6px 0px 0 black;
+      margin: 0 0 .5rem 2.5rem;
+      color: var(--amarillo);
+      text-shadow: -5px 0px 0 black;
     }
 
     & .grid {
@@ -373,8 +379,9 @@ html {
         & p {
           color: var(--amarillo);
           position: absolute;
-          left: 2px;
-          top: -5px;
+          left: 37%;
+          top: 45%;
+          transform: translate(-50%, -50%);
         }
 
         & img {
@@ -478,8 +485,7 @@ html {
     & .links {
       display: grid;
       grid-template-columns: 1fr 1fr;
-      column-gap: 1rem;
-      row-gap: 1rem;
+      margin-top: 2rem;
       & .link {
         position: relative;
         transition: all .4s ease-in-out;
@@ -488,7 +494,8 @@ html {
           color: var(--amarillo-opaco);
           font-weight: bold;
           left: 20px;
-          top: -5px;
+          top: 50%;
+          transform: translateY(-50%);
           z-index: 2;
           font-family: tercera;
           font-size: 1.2rem;
@@ -554,7 +561,8 @@ html {
             font-weight: bold;
             color: black;
             left: 1vw;
-            top: 0vh;
+            top: 50%;
+            transform: translateY(-50%);
             z-index: 2;
             font-family: tercera;
             font-size: 1vw;
@@ -587,6 +595,9 @@ html {
   margin-top: -4rem;
   padding: 10vw 0 0 0;
 
+  display: flex;
+  flex-direction: column;
+
   & .contenedor {
     
     max-width: 40vw;
@@ -606,23 +617,23 @@ html {
       }
       & p {
         font-family: tercera;
-        font-size: 1.8vw;
+        font-size: 1.6vw;
         color: white;
-        & .opaco {
-          color: var(--amarillo-opaco);
-        }
+        font-weight: bold;
+        margin: 1rem 0;
+      }
+      & .opaco {
+        color: var(--amarillo);
       }
     }
 
     & .contacto {
       padding: 5vw 0;
-      p {
-        font-weight: bold;
-      }
       & p {
         color: white;
         font-size: 1.1rem;
         margin-left: 1rem;
+        margin-top: .5rem;
       }
 
       & .correo {
@@ -630,8 +641,13 @@ html {
         & p {
           color: var(--amarillo);
           position: absolute;
-          left: 2px;
-          top: -5px;
+          top: 45%;
+          left: 50%;
+          transform: translate(-50%, -50%);
+
+          &:last-of-type {
+            margin-top: 0;
+          }
         }
 
         & img {
@@ -652,13 +668,8 @@ html {
 @media only screen and (max-width: 768px) {
 
   .house {
-    left: auto;
-    right: 20px;
-    
-
-    & img {
-      max-width: 25px;
-    }
+    margin-right: 10vw;
+    margin-top: 3vw;
   }
 
   #inicio {
@@ -753,7 +764,27 @@ html {
   }
   
   #comentarios {
+
+    & .contenedor {
+      display: block;
+
+      & .contenedor_form {
+        & .formulario {
+          display: flex;
+          flex-direction: column;
+
+          & .campo {
+            width: 500px;
+          }
+        }
+
+      }
+    }
+
     
+    & .textura1 {
+      display: none;
+    }
   }
 
   #tu {
@@ -761,7 +792,7 @@ html {
     
   
     & .contenedor {
-      max-width: 90vw;
+      max-width: 99vw;
   
       & h2 {
         margin-left: 0;
@@ -770,7 +801,9 @@ html {
       & .grid {
         display: grid;
         grid-template-columns: 1fr;
-        align-items: flex-end;
+        align-items: center;
+        max-width: 99vw;
+        margin: 0 auto;
       }
   
       & .imagen {
@@ -778,9 +811,9 @@ html {
         display: flex;
         flex-direction: column;
         align-items: center;
-  
+        margin-bottom: 3rem;
         & img {
-          max-width: 90vw;
+          max-width: 100vw;
         }
   
         & p {
@@ -796,10 +829,10 @@ html {
         }
  
         & .correo {
-          padding-bottom: 3rem;
+          
           & p {
             font-size: 5vw;
-            left: 6vw;
+            
           }
           & img {
             max-width: 90vw;
@@ -854,9 +887,7 @@ html {
         justify-items: center;
 
         & .link {
-          & p {
-            top: 2px;
-          }
+          
           & img {
             max-width: 90vw;
           }
@@ -866,9 +897,10 @@ html {
   }
 
   #red {
-    padding: 10rem 1.5rem 0 1.5rem;
+    padding: 10rem 1.5rem 5rem 1.5rem;
     margin-top: -15vh;
     overflow-x: hidden;
+    margin-left: -3px;
     & .contenedor {
       max-width: 90vw;
       & h2 {
@@ -888,13 +920,61 @@ html {
           margin-top: 1rem;
           & .red {
             & p {
-              top: -1vh;
-              left: 4vw;
               font-size: 5vw;
+              left: 5vw;
             }
             & img {
               max-width: 80vw;
             }
+          }
+        }
+      }
+    }
+  }
+
+  #carlota {
+    align-items: flex-end;
+    padding-top: 4rem;
+    overflow: hidden;
+    
+    & .contenedor {
+      max-width: 85vw;
+      margin: 0 auto;
+      position: relative;
+
+      & .textura {
+        left: -8vw;
+        width: 100vw;
+        z-index: 1;
+      }
+
+      & .info {
+        padding-bottom: 100vw;
+        & h2 {
+          font-size: 1.4rem;
+          text-shadow: -5px 0 0 var(--violeta);
+          margin-left: 5px;
+        }
+        & p {
+          font-size: 1rem;
+        }
+      }
+
+      & .contacto {
+        z-index: 2;
+        position: absolute;
+        bottom: 40vw;
+        left: 50%;
+        transform: translateX(-50%);
+
+        & p {
+          margin-left: 0;
+          font-size: 1rem;
+        }
+        & .correo {
+
+          & img {
+            width: 85vw;
           }
         }
       }
