--- a/src/index.scss
+++ b/src/index.scss
@@ -341,9 +341,9 @@ html {
   background-size: cover;
   background-repeat: no-repeat;
   background-position: 0px center;
-  margin-top: -3vw;
+  margin-top: -18vw;
   min-height: 100vh;
-  padding-top: 3vw;
+  padding-top: 18vw;
 
   & .house {
     margin: 1rem 0 1rem 2rem;
@@ -566,12 +566,15 @@ html {
   background-image: url(img/fondo_7.webp);
   background-size: cover;
   background-repeat: no-repeat;
-  margin-top: -4rem;
-  margin-left: -2px;
+  margin-top: -10vw;
   padding: 6rem;
+  padding-top: 10vw;
+  margin-left: -2px;
 
   
-
+  & .house {
+    padding-top: 1rem;
+  }
 
   & .contenedor {
     max-width: 80vw;
@@ -721,7 +724,8 @@ html {
   background-position: center center;
   padding-top: 1vw;
   margin-top: -3vw;
-  margin-right: -10px;
+  margin-right: -20px;
+  padding-right: 20px;
 
   display: flex;
   flex-direction: column;
@@ -1172,6 +1176,7 @@ html {
     overflow: auto;
     height: auto;
     margin-top: -5rem;
+    padding-right: 0;
     overflow-x: hidden;
 
     & .house {
