--- a/src/index.scss
+++ b/src/index.scss
@@ -38,6 +38,7 @@
   src: url(fonts/GlacialIndifference-Regular.otf);
 }
 @import "./styles/login";
+@import "./styles/admin";
 
 :root {
   --amarillo: rgb(255, 230, 0);
