--- a/src/index.scss
+++ b/src/index.scss
@@ -531,7 +531,7 @@ html {
   background-size: cover;
   background-repeat: no-repeat;
   margin-top: -15vw;
-  padding: 15vw 0 6rem 0;
+  padding: 17vw 0 6rem 0;
   overflow: hidden;
 
   & .estrella {
@@ -1248,10 +1248,11 @@ html {
 
   #carlota {
     align-items: flex-end;
-    padding-top: 4rem;
+    padding-top:6rem;
     overflow: auto;
     height: auto;
     margin-top: -5rem;
+    margin-left: -10px;
     padding-right: 0;
     overflow-x: hidden;
 
