--- a/src/index.scss
+++ b/src/index.scss
@@ -46,6 +46,8 @@
   --violeta: rgb(135, 54, 189);
 }
 
+
+
 * {
   box-sizing: border-box;
   margin: 0;
@@ -225,10 +227,11 @@ html {
 }
 
 #comentarios {
-  padding-top: 8rem;
-  padding-bottom: 20rem;
-  margin-top: -4rem;
+  padding-top: 20vh;
+  padding-bottom: 2rem;
+  margin-top: -10vh;
   margin-left: -5px;
+  height: 120vh;
   
   position: relative;
   
@@ -258,12 +261,39 @@ html {
   & .contenedor_form {
     display: flex;
     flex-direction: column;
+    position: relative;
   }
 
   & .formulario {
     justify-self: flex-end;
     display: grid;
     grid-template-columns: 1fr 1fr;
+
+    & .alerta {
+      position: absolute;
+      width: 100%;
+      bottom: -60px;
+      left: -15px;
+      text-align: center;
+      margin: 1rem;
+      grid-column: span 2;
+      color: white;
+      font-weight: bold;
+      font-size: 1.2rem;
+      padding: .5rem 1rem;
+      opacity: 0;
+      transition: opacity .5s ease-in;
+    }
+
+    .exito {
+      background-color: rgb(103, 151, 64);
+      opacity: 1;
+    }
+
+    .error {
+      background-color: rgb(206, 89, 89);
+      opacity: 1;
+    }
 
     & input[type="submit"] {
       justify-self: flex-end;
@@ -323,10 +353,42 @@ html {
       & textarea {
         border: none;
         padding: .5rem;
-        height: 100px;
+        height: 150px;
         font-size: 1.1rem;
         font-family: tercera;
       }
+    }
+  }
+  
+
+  & .comentarios {
+    margin: .5rem 1rem;
+    overflow-y: scroll;
+    max-height: 70vh;
+
+    & .comentario {
+      border-bottom: 2px solid black;
+      margin: 1rem 1rem;
+      padding-bottom: .5rem;
+
+      & h3 {
+        color: var(--violeta);
+        font-family: tercera;
+      }
+      & p {
+        font-family: tercera;
+      }
+    }
+
+    &::-webkit-scrollbar {
+      width: 8px;     
+      height: 8px;    
+    }
+    &::-webkit-scrollbar-thumb {
+      background-color: var(--violeta);
+    }
+    &::-webkit-scrollbar-track {
+      background-color: white;
     }
   }
 
@@ -344,7 +406,6 @@ html {
   background-repeat: no-repeat;
   background-position: 0px center;
   margin-top: -18vw;
-  min-height: 100vh;
   padding-top: 15vw;
 
   overflow-x: hidden;
@@ -877,8 +938,9 @@ html {
     display: flex;
     flex-direction: column;
     align-items: flex-end;
+    justify-content: center;
     height: auto;
-    padding-bottom: 11rem;
+    padding-bottom: 22vh;
 
     & .estrella {
       
@@ -939,9 +1001,10 @@ html {
 
   #menu {
     height: auto;
-    padding-bottom: 5rem;
     align-items: flex-end;
     margin-top: -5rem;
+    padding-top: 9rem;
+    padding-bottom: 6rem;
 
     & .house {
       margin-right: 10vw;
@@ -977,6 +1040,7 @@ html {
   }
   
   #comentarios {
+    margin-top: -12vh;
 
     & .house {
       align-self: flex-end;
@@ -1009,7 +1073,11 @@ html {
             }
           }
         }
+      }
 
+      & .comentarios {
+        margin-top: 2rem;
+        height: auto;
       }
     }
 
@@ -1021,7 +1089,9 @@ html {
 
   #tu {
     height: auto;
-    padding-top: 18vw;
+    padding-top: 24vh;
+    margin-top: -20vh;
+    display: block;
     
     & .house {
       align-self: flex-end;
@@ -1030,8 +1100,9 @@ html {
 
     & .estrella {
       max-width: 50vw;
-      right: -30vw;
-      top: 52vw;
+      right: auto;
+      left: -22vw;
+      top: 10vh;
       transform: translate(-50vw, -75vw);
     }
   
@@ -1040,6 +1111,7 @@ html {
   
       & h2 {
         margin-left: 1rem;
+        z-index: 11;
       }
   
       & .grid {
@@ -1325,4 +1397,15 @@ html {
 .menuActivo {
   transform: scale(1);
   opacity: 1;
+}
+.swal2-shown {
+  padding-right: 0!important;
+}
+
+#admin h1,
+#admin h2,
+#admin td,
+#admin th, 
+#admin p {
+  font-family: tercera;
 }
