--- a/src/styles/admin.scss
+++ b/src/styles/admin.scss
@@ -5,7 +5,20 @@
     & .header {
         padding: 1rem;
         background-color: rgb(0, 102, 255);
+        display: flex;
+        justify-content: space-between;
 
+        & button {
+            border: none;
+            background: none;
+            font-weight: bold;
+            color: white;
+            align-self: flex-end;
+
+            &:hover {
+                cursor: pointer;
+            }
+        }
 
         & h1 {
             font-size: 2.5rem;
@@ -18,39 +31,64 @@
         display: flex;
         flex-direction: column;
         align-items: center;
+        overflow: scroll;
+        height: 100vh;
+        width: 100vw;
 
         & h2 {
             padding: .5rem;
         }
 
-        & .contenedor_tabla {
-            overflow-x: scroll;
-        }
         & table {
             border-collapse: collapse;
             border-spacing: 0;
             width: 100%;
+            max-width: 900px;
+            display: block;
+            overflow: scroll;
             border: 1px solid #ddd;
-        }
 
-        & .cabecera {       
-            & th {
-                font-size: 1.2rem;
+            & button {
+                border: none;
+                background: none;
+                
+                &:hover {
+                    cursor: pointer;
+                }
             }
         }
-
-        & .cuerpo {
-
-        }
-
+        
         & th,
         & td {
             text-align: left;
             padding: 8px;
         }
+        & .cabecera {       
+            & th {
+                font-size: 1.2rem;
+                border: 1px solid #ddd;
+            }
+            
+        }
 
         & tr:nth-child(even){
             background-color: #f2f2f2
+        }
+
+
+    }
+}
+
+@media only screen and (min-width: 608px) {
+    #admin {
+
+        & .comentarios {
+
+
+            & table {
+                display: initial;
+                width: auto;
+            }
         }
     }
 }
