--- a/src/styles/admin.scss
+++ b/src/styles/admin.scss
@@ -81,7 +81,9 @@
 
 @media only screen and (min-width: 608px) {
     #admin {
-
+        & .header {
+            flex-direction: column;
+        }
         & .comentarios {
 
 
